--- a/GetKeyVaultToken.csproj
+++ b/GetKeyVaultToken.csproj
@@ -3,13 +3,10 @@
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <AssemblyName>GetKeyVaultToken</AssemblyName>
+    <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
   </PropertyGroup>
 
   <ItemGroup>
-    <!-- <PackageReference Include="PowerShellStandard.Library" Version="5.1.0-preview-06">
-      <PrivateAssets>All</PrivateAssets>
-    </PackageReference> -->
-    <!-- <PackageReference Include="Microsoft.Identity.Client" Version="4.59.0" /> -->
     <PackageReference Include="Smartersoft.Identity.Client.Assertion" Version="0.7.0" />
     <PackageReference Include="Microsoft.PowerShell.SDK" Version="7.2.0" />
   </ItemGroup>
