--- a/GetKeyVaultToken.csproj
+++ b/GetKeyVaultToken.csproj
@@ -1,14 +1,16 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <Authors>Mathias Sundman</Authors>
+    <Company>IT-Total Sweden AB</Company>
+    <TargetFramework>netstandard2.0</TargetFramework>
     <AssemblyName>GetKeyVaultToken</AssemblyName>
     <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="PowerShellStandard.Library" Version="5.1.1" />
     <PackageReference Include="Smartersoft.Identity.Client.Assertion" Version="0.7.0" />
-    <PackageReference Include="Microsoft.PowerShell.SDK" Version="7.2.0" />
   </ItemGroup>
 
 </Project>
