--- a/src/dotnet/KeyVaultToken.csproj
+++ b/src/dotnet/KeyVaultToken.csproj
@@ -4,7 +4,7 @@
     <Authors>Mathias Sundman</Authors>
     <Company>IT-Total Sweden AB</Company>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <AssemblyName>GetKeyVaultToken</AssemblyName>
+    <AssemblyName>KeyVaultToken</AssemblyName>
     <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
   </PropertyGroup>
 
